# LangViz

./: .builderignore  .gitignore  Builderfile  INGESTION_OPTIMIZATION_SUMMARY.md  Makefile  OPTIMIZED_QUICK_START.md  README.md  TIER1_2_STATUS.md  plan.md  populate_entries.sql  populate_entries_chunked.sql
backend/: __init__.py  config.py  errors.py  examples_observability.py  main.py  observ.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  dependencies.py  routes.py
backend/cli/: accelerated_process.py  bulk.py  download_sources.py  embed.py  ingest.py  process.py  scrape.py  similarity.py  verify_coverage.py
backend/core/: __init__.py  contracts.py  similarity.py  types.py
backend/interop/: __init__.py  grpc_client.py  parser_pb2.py  parser_pb2_grpc.py  perl_client.py  r_client.py
backend/services/: __init__.py  cognate.py  concepts.py  embedding.py  graph.py  optimized.py  phonetic.py  phylo.py  phylogeny.py  semantic.py  unified.py  visualize.py
backend/storage/: __init__.py  accelerated.py  batch.py  bulk.py  cache.py  cleaners.py  extractors.py  ingest.py  loaders.py  pipeline.py  provenance.py  repositories.py  stream.py  validators.py
backend/storage/migrations/: 001_initial_schema.sql  002_provenance_layer.sql  003_similarity_system.sql
backend/tests/: benchmark_di.py  test_accelerated_pipeline.py  test_cleaners.py  test_dependencies.py  test_r_integration.py  test_r_service.py
data/: .gitignore  README.md
data/sources/: catalog.toml
docs/: ACCELERATED_INGESTION.md  DATA_ACQUISITION_STRATEGY.md  DATA_SOURCES_SUMMARY.md  DEPENDENCY_INJECTION.md  LANGUAGE_COVERAGE.md  MANDATORY_INTEGRATIONS.md  OBSERVABILITY.md  PERFORMANCE.md  QUICK_START.md  R_INTEGRATION.md  SIMILARITY_ARCHITECTURE.md  STORAGE_SYSTEM.md
frontend/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/routes/: +page.svelte
frontend/src/viz/: index.ts  network.ts
scripts/: check_embedding_progress.sh  check_integrations.sh  setup_missing.sh  validate_integrations.py
services/langviz-rs/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  pyproject.toml
services/langviz-rs/src/: cluster.rs  graph.rs  lib.rs  phonetic.rs  sparse.rs  types.rs
services/langviz-rs/tests/: integration_test.rs
services/phonetic-rs/: Cargo.toml  pyproject.toml
services/phonetic-rs/src/: lib.rs
services/phylo-r/: DESCRIPTION  QUICKSTART.md  README.md  install_deps.R  server.R  start.sh
services/regexer/: README.md  cpanfile  server.pl  start.sh
services/regexer/lib/: Parser.pm
services/regexer/proto/: parser.proto
