[package]
name = "langviz-phonetic"
version = "0.1.0"
edition = "2021"

[lib]
name = "langviz_phonetic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
unicode-segmentation = "1.10"
rayon = "1.8"
ndarray = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

